fix overflow

--- a/src/styles/built.css
+++ b/src/styles/built.css
@@ -851,6 +851,10 @@ video {
   height: 100%;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
 .min-h-16 {
   min-height: 4rem;
 }
@@ -893,6 +897,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .max-w-64 {
@@ -966,6 +974,10 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .overflow-y-hidden {
